# tfstate-drift-inspector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE.md  fly.toml  pyproject.toml  workspace_config.json.example  workspaces.example.json
.github/workflows/: ci.yml  deploy.yml
.snapshots/: workflow-local-fixes.yml  wrangler.toml
deploy/d1/: schema.sql
deploy/frontend/: index.html
deploy/landing/: index.html
deploy/workers/: get_d1_id.py  package-lock.json  package.json  wrangler.toml
deploy/workers/src/: worker.js
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
scripts/: daily_drift_scan.py  daily_drift_scan.sh  scan_workspaces.py  smoke_test.sh
src/drift_inspector/: __init__.py  api.py  cli.py  config.py  engine.py  github_integration.py  models.py  slack_integration.py
tests/: test_config.py  test_engine.py  test_models.py  test_slack.py
