[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfstate-drift-inspector"
version = "0.1.0"
description = "Nightly Terraform drift detection with Slack alerts and remediation PRs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-terraform>=0.10.0",
    "pygithub>=2.1.0",
    "slack-sdk>=3.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "croniter>=2.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
aws = [
    "boto3>=1.35.0",
]
fly = [
    "fly-api>=0.1.0",
]

[project.scripts]
drift-inspector = "drift_inspector.cli:app"
drift-scan = "drift_inspector.scan:main"
drift-alert = "drift_inspector.alert:main"
drift-pr = "drift_inspector.pr:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "W", "C4", "PT", "PLE", "PLR", "PLW", "TRY", "T20", "ARG", "PTH", "ERA", "PD", "PGH", "PIE", "SIM", "TID", "EXE", "LOG", "NPY", "RET", "PERF", "INT", "ICN", "DTZ", "FIX", "FLY", "RSE", "ASYNC"]
ignore = ["S101", "PT004", "PT007", "PT012", "PT015", "PTH101", "PTH102", "PTH103", "PTH104", "PTH105", "PTH106", "PTH107", "PTH108", "PTH109", "PTH110", "PTH111", "PTH112", "PTH113", "PTH114", "PTH115", "PTH116", "PTH117", "PTH118", "PTH119", "PTH120"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.setuptools.packages.find]
where = ["src"]